# ssquarterly_companion

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/chromadb/fac0f8b4-a0ce-47f4-868c-5faa5811496d/: index_metadata.pickle
data/chromadb/fe3f0a5e-0386-4f53-ad71-0ffe42887779/: index_metadata.pickle
data/raw/quarterly/2026-03/: quarter.json
data/raw/quarterly/2026-03/01/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  hope-ss.json  inside-story.json  lesson.json  teacher-comments.json
data/raw/quarterly/2026-03/02/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  hope-ss.json  inside-story.json  lesson.json  teacher-comments.json
data/raw/quarterly/2026-03/03/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  hope-ss.json  inside-story.json  lesson.json  teacher-comments.json
data/raw/quarterly/2026-03/04/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  hope-ss.json  inside-story.json  lesson.json  teacher-comments.json
data/raw/quarterly/2026-03/05/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  hope-ss.json  inside-story.json  lesson.json  (+1 more)
src/api/routes/: audio.py
src/ingestion/bible/: chunker.py  embedder.py  ingest_script.py  loader.py  parser.py
src/ingestion/egw/: scraper.py
src/ingestion/quarterly/: chunker.py  clean_html.py  downloader.py  embedder.py  extractor.py  ingest.py  loader.py  parser.py
src/retrieval/: bm25.py  hybrid_search.py  reranker.py  retriever.py  search-cli.py  vector_search.py
src/services/: script_generator.py  tts.py
(+88 files in other folders)
