[project]
name = "quarterlycompanion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi>=0.139.1",
    "httpx>=0.28.1",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.1",
    "markdownify>=1.2.3",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "tqdm>=4.68.4",
    "transformers>=5.14.1",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
